# plinko-extractor

./: AGENTS.md  CHANGELOG.md  README.md
.github/workflows/: formal.yml
docs/: hint_generation.md  plinko_paper_index.json
fpga/: README.md
fpga/rtl/: aes128_encrypt.v  aes_round.v  aes_sbox.v  prp_systolic_array.v  swap_or_not_round.v
fpga/sim/: tb_aes128.v  tb_aes128_debug.v  tb_round.v  tb_sbox.v
plinko/: Cargo.toml
plinko/formal/: .lia.cache  .nia.cache  Makefile  README.md
plinko/formal/docs/: TRUST_BASE.md
plinko/formal/proofs/: .DbProofs.aux  .IprfConcrete.aux  .IprfProofs.aux  .PrpBridge.aux  .SwapOrNotProofs.aux
plinko/formal/scripts/: translate.sh
plinko/formal/sims/: .HintInitSim.aux  .IprfSim.aux  .SimTypes.aux  .SwapOrNotSim.aux  HintInitSim.glob  HintInitSim.v  HintInitSim.vo  README.md  SwapOrNotSim.v
plinko/formal/specs/: .BinomialSpec.aux  .CommonTypes.aux  .DbSpec.aux  .IprfSpec.aux  .SwapOrNotSpec.aux
plinko/formal/src/: constant_time.v  db.v  iprf.v
plinko/proptest-regressions/: db.txt
plinko/src/: binomial_gaussian.rs  binomial_leveled.rs  binomial_precomputed.rs  binomial_tee.rs  db.rs  iprf.rs  lib.rs
state-syncer/src/: binomial.rs  constant_time.rs  iprf.rs  rpc.rs
