[package]
name = "plinko"
version = "0.1.0"
edition = "2021"
description = "Plinko PIR library - invertible PRF and hint generation"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
eyre = "0.6"
indicatif = "0.17"
sha2 = "0.10"
aes = "0.8"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
memmap2 = "0.9"

[dev-dependencies]
proptest = "1.4"

# Kani configuration for formal verification
[package.metadata.kani]
# No special flags needed

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
